--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.471.1",
+    "@react-spring/web": "^9.7.5",
+    "framer-motion": "^11.18.1",
+    "lucide-react": "^0.471.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.15.0",
     "react-router-dom": "^7.1.2"
   },
   "devDependencies": {
